actuator health points

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -29,3 +29,15 @@ spec:
               value: http://bookshop-config-service
             - name: SPRING_RABBITMQ_HOST
               value: bookshop-rabbitmq
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 9001
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 9001
+            initialDelaySeconds: 5
+            periodSeconds: 15
